--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -53,7 +53,7 @@
 <section class="topSection">
 <h3>About</h3>
 
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <p>Aliqua elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 </p>
 </section>
 
